--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "connected-react-router": "^6.8.0",
+    "es6-promise": "^4.2.8",
     "material-table": "^1.69.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
