--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "es6-promise": "^4.2.8",
     "formik": "^2.2.6",
     "material-table": "^1.69.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
