--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^3.1.0",
     "connected-react-router": "^6.8.0",
     "es6-promise": "^4.2.8",
     "formik": "^2.2.6",
@@ -23,7 +24,9 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-hot-toast": "^1.0.2",
     "react-moment": "^1.1.1",
     "react-paginate": "^7.1.0",
