--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "chart.js": "^3.1.0",
     "connected-react-router": "^6.8.0",
     "es6-promise": "^4.2.8",
@@ -25,7 +25,9 @@
     "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
