--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-hot-toast": "^1.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-moment": "^1.1.1",
     "react-paginate": "^7.1.0",
     "react-redux": "^7.2.2",
