--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/**/*.js --fix-dry-run",
+    "pretty": "prettier \"src/**/*.js\""
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +71,24 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "redux-devtools-extension": "^2.13.8"
+  },
+  "lint-staged": {
+    "./**/*.{js,jsx,ts,tsx,md}": [
+      "npx prettier --write",
+      "npm run lint",
+      "git add"
+    ]
   }
 }
